# python-x32

./: pyproject.toml
src/pythonx32/: OSC.py  x32.py
x32/: __init__.py  dumpmessages.py  x32.py  x32parameters.py
